src/screens/snapshots/pmp__screens__project_form__tests__project_form_with_text_snapshot.snap
---
source: src/screens/project_form.rs
expression: render_to_string(&form)
---
┌Create Project────────────────────────────────────────────┐
│┌Name────────────────────────────────────────────────────┐│
││My Project                                              ││
│└────────────────────────────────────────────────────────┘│
│┌Description─────────────────────────────────────────────┐│
││A description                                           ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
│└────────────────────────────────────────────────────────┘│
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
